# futbolautomate

./: .env.example  .gitignore  README.md  alembic.ini  docker-compose.yml  pyproject.toml  requirements.txt
app/: __init__.py
app/config/: __init__.py  competitions.json  editorial_rules.json  editorial_schedule.json  match_importance.json  sources.json  standings_zones.json  story_importance.json  team_aliases.json  team_name_aliases.json  typefully_autoexport.json
app/core/: __init__.py  catalog.py  config.py  constants.py  draft_temp.py  editorial.py  editorial_schedule.py  enums.py  exceptions.py  logging.py  match_importance.py  standings_zones.py  story_importance.py  typefully_autoexport.py
app/db/: __init__.py  base.py  models.py  session.py
app/llm/: schemas.py
app/normalizers/: __init__.py  competitions.py  dates.py  statuses.py  teams.py  text.py
app/pipelines/: __init__.py  competition_catalog.py  draft_temp.py  editorial_approval.py  editorial_narratives.py  editorial_news.py  editorial_ops.py  editorial_planner.py  editorial_quality_checks.py  editorial_queue.py  editorial_release.py  editorial_rewrite.py  editorial_summary.py  editorial_viral_stories.py  export_base.py  generate_content.py  match_importance.py  publication_dispatch.py  query_competition.py  query_news.py  results_roundup.py  run_competition.py  runner.py  (+13 more)
docs/: README_detailed.md  cron_setup.md  windows_scheduler_setup.md
migrations/: env.py
scripts/: example_queries.sql  seed_competitions.py  seed_team_socials.py  team_socials_dataset.json
tests/: conftest.py  helpers.py
(+255 files in other folders)
